feat: добавлены функции для обновления и удаления пользователя, обновлены модели и документация
